react native cn

--- a/themes/yilia/layout/_partial/after-footer.ejs
+++ b/themes/yilia/layout/_partial/after-footer.ejs
@@ -1,6 +1,7 @@
 
 <link rel="stylesheet" href="<%- config.root %>js/gitment-theme-default.css">
 <script src="<%- config.root %>js/gitment.browser.js"></script>
+<script async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 
 <script>
 	var yiliaConfig = {
@@ -39,3 +40,9 @@ gitment.render('commentContainer');
 </script>
 <% } %>
 <!-- Gitment End -->
+
+<%- partial("baidu_tongji") %>
+
+本站总访问量<span id="busuanzi_value_site_pv"></span>次
+本站访客数<span id="busuanzi_value_site_uv"></span>人次
+本文总阅读量<span id="busuanzi_value_page_pv"></span>次
