--- a/themes/yilia/layout/_partial/after-footer.ejs
+++ b/themes/yilia/layout/_partial/after-footer.ejs
@@ -41,8 +41,4 @@ gitment.render('commentContainer');
 <% } %>
 <!-- Gitment End -->
 
-<%- partial("baidu_tongji") %>
-
-本站总访问量<span id="busuanzi_value_site_pv"></span>次
-本站访客数<span id="busuanzi_value_site_uv"></span>人次
-本文总阅读量<span id="busuanzi_value_page_pv"></span>次
+<%- partial('baidu_tongji') %>
