--- a/themes/yilia/layout/_partial/baidu_tongji.ejs
+++ b/themes/yilia/layout/_partial/baidu_tongji.ejs
@@ -1,4 +1,5 @@
-<% if (theme.baidu_tongji) { %>
+<% if (theme.baidu_tongji){ %>
+<!-- baidu_tongji -->
 <script>
 var _hmt = _hmt || [];
 (function() {
@@ -8,4 +9,5 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
+<!-- End baidu_tongji -->
 <% } %>
