--- a/source/photos/index.ejs
+++ b/source/photos/index.ejs
@@ -1,15 +1,14 @@
 ---
 layout: post
 slug: "photos"
-title: "相册"
+title: "相册/视频"
 noDate: "true"
 ---
 
 <link rel="stylesheet" href="./ins.css">
 <div class="photos-btn-wrap">
-<a class="photos-btn active" href="javascript:void(0)">图片</a>
-<a class="photos-btn" href="javascript:void(0)">摄影</a>
-<!--<a class="photos-btn" target="_blank" href="http://litten.me/gallery/">相册</a>-->
+	<a class="photos-btn active" href="javascript:void(0)">相册</a>
+	<a class="photos-btn" href="./videos.html">视频</a>
 </div>
 <div class="instagram itemscope">
 <a href="https://github.com/guchunli/blog_photos/" target="_blank" class="open-ins">图片正在加载中…</a>
@@ -25,4 +24,6 @@ setTimeout(function() {
 loadScript('./ins.js')
 }, 0)
 })()
-</script>
+
+
+</script> 
