--- a/themes/next/source/css/_common/components/post/post.styl
+++ b/themes/next/source/css/_common/components/post/post.styl
@@ -45,3 +45,4 @@
 @import "post-gallery";
 @import "post-reward" if hexo-config('alipay') or hexo-config('wechatpay');
 @import "post-copyright.styl" if hexo-config('post_copyright.enable')
+@import "my-post-copyright"
