--- a/themes/yilia/layout/layout.ejs
+++ b/themes/yilia/layout/layout.ejs
@@ -22,6 +22,13 @@
     <%- partial('_partial/after-footer') %>
     <%- partial('_partial/tools') %>
     <%- partial('_partial/viewer') %>
+
+    <!-- 页面点击小红心 -->
+    <script type="text/javascript" src="/js/clicklove.js"></script>
+    <!-- 线条背景动画 -->
+    {% if theme.canvas_nest %}
+      <script type="text/javascript" src="//cdn.bootcss.com/canvas-nest.js/1.0.0/canvas-nest.min.js"></script>
+    {% endif %}
   </div>
 </body>
 </html>
