--- a/source/photos/index.ejs
+++ b/source/photos/index.ejs
@@ -3,6 +3,8 @@ layout: post
 slug: "photos"
 title: "相册/视频"
 noDate: "true"
+toc: false
+copyright: false
 ---
 
 <link rel="stylesheet" href="./ins.css">
