--- a/source/photos/videos.ejs
+++ b/source/photos/videos.ejs
@@ -6,6 +6,8 @@ noDate: "true"
 comments: "true"
 reward: "true"
 open_in_new: false
+toc: false
+copyright: false
 ---
 <link rel="stylesheet" href="./ins.css">
 <div class="photos-btn-wrap">
