--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -8,3 +8,84 @@
    -webkit-box-shadow: 0 0 5px rgba(202, 203, 203, .5);
    -moz-box-shadow: 0 0 5px rgba(202, 203, 204, .5);
   }
+
+// 自定义的侧栏时间样式
+#days {
+    display: block;
+    color: rgb(248, 101, 59);
+    font-size: 13px;
+    margin-top: 15px;
+}
+
+
+
+
+// 页面最顶部的横线
+.headband {
+    height: 1.5px;
+    background-image: linear-gradient(90deg, #F79533 0%, #F37055 15%, #EF4E7B 30%, #A166AB 44%, #5073B8 58%, #1098AD 72%, #07B39B 86%, #6DBA82 100%);
+}
+// 页面顶部行高
+.header {
+    line-height: 1.5;
+}
+// 页面留白更改
+.header-inner {
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+// 顶栏宽度
+.container .header-inner {
+    width: 100%;
+}
+// 渐变菜带，CSS代码copy自https://githubuniverse.com
+.site-meta {
+    background-image: linear-gradient(90deg, #F79533 0%, #F37055 15%, #EF4E7B 30%, #A166AB 44%, #5073B8 58%, #1098AD 72%, #07B39B 86%, #6DBA82 100%);
+}
+// 站点名背景
+.brand{
+    background-color: rgba(255, 255, 255, 0);
+    margin-top: 15px;
+    padding: 0px;
+}
+// 站点名字体
+.site-title {
+    font-size: 75px;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    line-height: 80px;
+    letter-spacing: 3px;
+}
+// 站点子标题
+.site-subtitle{
+    margin: 0px;
+    font-size: 16px;
+    letter-spacing: 1px;
+    padding-bottom: 3px;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    border-bottom-width: 3px;
+    border-bottom-style: solid;
+    border-bottom-color: rgb(161, 102, 171);
+}
+// 菜单
+.menu {
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding: 5px;
+    background-color: rgba(255, 255, 255, 0.75);
+    box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.15);
+}
+// 菜单超链接字体大小
+.menu .menu-item a {
+    font-size: 15px;
+}
+// 菜单各项边距
+.menu .menu-item {
+    margin: 5px 15px;
+}
+// 菜单超链接样式
+.menu .menu-item a:hover {
+    border-bottom-color: rgba(161, 102, 171, 0);
+}
