--- a/themes/next/source/css/_common/components/header/header.styl
+++ b/themes/next/source/css/_common/components/header/header.styl
@@ -1,4 +1,5 @@
-.header { background: url('../image/background.jpg'); }
+.header { background: $head-bg; }
+//.header { background: url('../image/background.jpg'); }
 
 .header-inner { position: relative; }
 
